Update minor fixes in notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's create a simple quantum circuits with `10` qubits and `4` layers of random gates."
+    "Now let's create a simple quantum circuits with `10` qubits and `8` layers of random gates."
    ]
   },
   {
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have created a circuit, let's convert it to a tensor network with `Tenet`"
+    "Now that we have created a circuit, let's convert it to a quantum tensor network with `Qrochet`"
    ]
   },
   {
@@ -145,7 +145,7 @@
     "ψᵢₙ = Product(fill([1, 0], n))\n",
     "ψₒᵤₜ = Product(fill([1, 0], n))\n",
     "\n",
-    "qtn = merge(Quantum(ψᵢₙ), U, Quantum(ψₒᵤₜ)')\n",
+    "qtn = merge(Quantum(ψᵢₙ), U, Quantum(ψₒᵤₜ)') # < ψᵢₙ | U | ψₒᵤₜ >\n",
     "tn = TensorNetwork(qtn)\n",
     "\n",
     "plot(tn, layout=Stress())"
@@ -169,6 +169,13 @@
     "path = einexpr(tn, optimizer=Greedy())\n",
     "@show total_flops = mapreduce(flops, +, Branches(path))\n",
     "@show max_dims = maximum(ndims, Branches(path));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Largest Tensor in the computation: $2^{14} * 16$ bytes $= 0.262144$ MB"
    ]
   },
   {
@@ -236,7 +243,9 @@
     "        rand_gate = rand(gates)\n",
     "        push!(circ, rand_gate(j, j+1; θ=rand()*2π))\n",
     "    end\n",
-    "end"
+    "end\n",
+    "\n",
+    "print(circ)"
    ]
   },
   {
@@ -266,7 +275,7 @@
    "source": [
     "U = Quantum(circ)\n",
     "\n",
-    "qtn = merge(Quantum(ψᵢₙ), U, Quantum(ψₒᵤₜ)')\n",
+    "qtn = merge(Quantum(ψᵢₙ), U, Quantum(ψₒᵤₜ)') # < ψᵢₙ | U | ψₒᵤₜ >\n",
     "tn = TensorNetwork(qtn)\n",
     "\n",
     "plot(tn; layout=Spring())"
@@ -285,6 +294,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Largest Tensor in the computation: $2^{26} * 16$ bytes $= 1.07$ GB !"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -294,19 +310,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Much larger circuit!! We need an approximation! We will use MPS"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "@time c = contract(tn; path) # Exact result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Much larger circuit! We need an approximation! We will use `Matrix Product States (MPS)`"
    ]
   },
   {
@@ -324,7 +340,7 @@
     "        evolve!(ψᵢₙ, gate; maxdim=2, renormalize=false)\n",
     "    end\n",
     "\n",
-    "    overlap(ψᵢₙ, ψₒᵤₜ)\n",
+    "    overlap(ψᵢₙ, ψₒᵤₜ) # <ψ_evolved | ψ_out>\n",
     "end"
    ]
   },
@@ -431,7 +447,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define two gates that will be used. The `trotter_XX` gate is a Trotterized version of the XX gate, and the `trotter_Z` gate is a Trotterized version of the Z gate."
+    "We start the quench from a product state where all qubits are in the $|+\\rangle$ state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ket₊ = 1/√2 * [1, 1]\n",
+    "ψ = convert(Chain, Product(fill(ket₊, n)))\n",
+    "\n",
+    "plot(TensorNetwork(ψ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can find the energy of the system $|\\psi\\rangle=| + + \\dots + \\rangle$ by measuring the expectation value of the Hamiltonian $\\langle \\psi | H | \\psi \\rangle$.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using LinearAlgebra\n",
+    "\n",
+    "λ = 0.3\n",
+    "\n",
+    "ket₊ = 1/√2 * [1, 1]\n",
+    "ψ = convert(Chain, Product(fill(ket₊, n)))\n",
+    "\n",
+    "function energy_Ising(ψ, λ)\n",
+    "    id = Matrix(1.0I, 2, 2)\n",
+    "    H_ij = -1 * kron(Matrix(X()), Matrix(X())) + λ * (kron(Matrix(Z()), id) + kron(id, Matrix(Z())))\n",
+    "    H_ij = reshape(H_ij,2,2,2,2)\n",
+    "\n",
+    "    e_i = []\n",
+    "    for i in 1:n-1\n",
+    "        H_gate = Dense(Qrochet.Operator(), H_ij; sites=Site[Site(i), Site(i+1), Site(i, dual=true), Site(i+1, dual=true)])\n",
+    "        push!(e_i, only(expect(ψ, [H_gate])))\n",
+    "    end\n",
+    "    return e_i\n",
+    "end\n",
+    "\n",
+    "energy_Ising(ψ, λ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define two gates that will be used in the TEBD. The `trotter_XX` gate is a Trotterized version of the XX gate, and the `trotter_Z` gate is a Trotterized version of the Z gate."
    ]
   },
   {
@@ -459,63 +530,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start the quench from a product state where all qubits are in the $|+\\rangle$ state."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ket₊ = 1/√2 * [1, 1]\n",
-    "ψ = Product(fill(ket₊, n))\n",
-    "ψ = convert(Chain, ψ)\n",
-    "\n",
-    "plot(TensorNetwork(ψ))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can find the energy of the system $|\\psi\\rangle=| + + \\dots + \\rangle$ by measuring the expectation value of the Hamiltonian $\\langle \\psi | H | \\psi \\rangle$.   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using LinearAlgebra\n",
-    "\n",
-    "λ = 0.3\n",
-    "\n",
-    "ket₊ = 1/√2 * [1, 1]\n",
-    "ψ = Product(fill(ket₊, n))\n",
-    "ψ = convert(Chain, ψ)\n",
-    "\n",
-    "function energy_Ising(ψ, λ)\n",
-    "    id = Matrix(1.0I, 2, 2)\n",
-    "    H = -1 * kron(Matrix(X()), Matrix(X())) + λ * (kron(Matrix(Z()), id) + kron(id, Matrix(Z())))\n",
-    "    H = reshape(H,2,2,2,2)\n",
-    "\n",
-    "    e_i = []\n",
-    "    for i in 1:n-1\n",
-    "        H_gate = Dense(Qrochet.Operator(), H; sites=Site[Site(i), Site(i+1), Site(i, dual=true), Site(i+1, dual=true)])\n",
-    "        push!(e_i, only(expect(ψ, [H_gate])))\n",
-    "    end\n",
-    "    return e_i\n",
-    "end\n",
-    "\n",
-    "energy_Ising(ψ, λ)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now we can start the time evolution:"
    ]
   },
@@ -529,7 +543,7 @@
     "ψ = Product(fill(ket₊, n))\n",
     "ψ = convert(Chain, ψ)\n",
     "\n",
-    "# Time evolution:\n",
+    "# Time evolution with the TEBD algorithm:\n",
     "expected_vals = Float64[]\n",
     "@time for it in 1:timesteps\n",
     "    # First apply the gates on even qubits\n",
@@ -571,20 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But what if we had a large system? We can limit the bond dimension $\\chi$! To do this, we first `canonize` the MPS:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ket₊ = 1/√2 * [1, 1]\n",
-    "ψ_original = convert(Chain, Product(fill(ket₊, n)))\n",
-    "\n",
-    "canonize!(ψ)\n",
-    "plot(TensorNetwork(ψ), layout=Stress())"
+    "But what if we had a large system? We can limit the bond dimension $\\chi$!"
    ]
   },
   {
@@ -600,28 +601,30 @@
     "\n",
     "observables = Dense.([Z(5)])\n",
     "\n",
-    "maxdims = [1, 2, 4, 8, 16]\n",
+    "χ_list = [1, 2, 4, 8, 16]\n",
     "\n",
-    "for maxdim in maxdims\n",
-    "    # Reset ψ to its original state for each maxdim iteration\n",
+    "for χ in χ_list\n",
+    "    # Reset ψ to its original state for each χ iteration\n",
     "    ψ = deepcopy(ψ_original)\n",
     "    canonize!(ψ)\n",
-    "    expectedvals_maxdim = Float64[]\n",
+    "    expectedvals_χ = Float64[]\n",
     "\n",
-    "    @time for it in 1:timesteps\n",
+    "    @show χ\n",
+    "\n",
+    "    for it in 1:timesteps\n",
     "        for (i,j) in Iterators.filter(==(2) ∘ length, Iterators.partition(1:n,2))\n",
-    "            evolve!(ψ, trotter_XX(i,j; δₜ); maxdim=maxdim, iscanonical=true)\n",
+    "            evolve!(ψ, trotter_XX(i,j; δₜ); maxdim=χ, iscanonical=true)\n",
     "        end\n",
     "        for (i,j) in Iterators.filter(==(2) ∘ length, Iterators.partition(2:n,2))\n",
-    "            evolve!(ψ, trotter_XX(i,j; δₜ); maxdim=maxdim, iscanonical=true)\n",
+    "            evolve!(ψ, trotter_XX(i,j; δₜ); maxdim=χ, iscanonical=true)\n",
     "        end\n",
     "        for i in 1:n\n",
-    "            evolve!(ψ, trotter_Z(i; λ=0.3, δₜ); maxdim=maxdim, iscanonical=true)\n",
+    "            evolve!(ψ, trotter_Z(i; λ=0.3, δₜ); maxdim=χ, iscanonical=true)\n",
     "        end\n",
-    "        push!(expectedvals_maxdim, abs(only(expect(ψ, observables))))\n",
+    "        push!(expectedvals_χ, abs(only(expect(ψ, observables))))\n",
     "    end\n",
     "\n",
-    "    expectedvals[maxdim] = expectedvals_maxdim\n",
+    "    expectedvals[χ] = expectedvals_χ\n",
     "end"
    ]
   },
@@ -643,10 +646,9 @@
     "line_styles = reverse([(:solid, 2), (:dash, 2), (:dot, 2), (:dashdot, 2), (:dashdotdot, 2)])\n",
     "markers = reverse([:circle, :rect, :diamond, :cross, :star5])\n",
     "\n",
-    "# Reverse the order of iteration for maxdims\n",
-    "for (index, maxdim) in enumerate(maxdims)\n",
+    "for (index, χ) in enumerate(χ_list)\n",
     "    # Convert expectedvals[maxdim] to a Float32 array explicitly\n",
-    "    y_values = Float32.(expectedvals[maxdim])\n",
+    "    y_values = Float32.(expectedvals[χ])\n",
     "    x_values = Float32.(1:length(y_values)) # Ensure x values are also Float32 for consistency\n",
     "\n",
     "    lines!(ax, x_values, y_values,\n",
@@ -655,7 +657,7 @@
     "          linewidth=line_styles[index][2],\n",
     "          marker=markers[index],\n",
     "          markersize=10,\n",
-    "          label=\"maxdim = $maxdim\")\n",
+    "          label=\"χ = $χ\")\n",
     "end\n",
     "\n",
     "legend = Legend(fig[1, 2], ax, valign=:top)\n",
@@ -670,7 +672,7 @@
    "source": [
     "### Exercise !\n",
     "\n",
-    "Use the `TEBD` algorithm to simulate the time evolution of a Matrix Product State (MPS) under the XXZ Hamiltonian: $H = -\\frac{1}{2}\\sum^{N}_{i}(\\sigma_{i}^{x}\\sigma_{i+1}^{x}+\\sigma_{i}^{y}\\sigma_{i+1}^{y}+\\Delta\\sigma_{i}^{z}\\sigma_{i+1}^{z})$\n"
+    "Use the `TEBD` algorithm to simulate the time evolution of a Matrix Product State (MPS) under the XXZ Hamiltonian: $H = -\\frac{1}{2}\\sum^{N}_{i}(\\sigma_{i}^{x}\\sigma_{i+1}^{x}+\\sigma_{i}^{y}\\sigma_{i+1}^{y}+\\Delta\\sigma_{i}^{z}\\sigma_{i+1}^{z})$ with $\\Delta=0$.\n"
    ]
   },
   {
@@ -680,11 +682,11 @@
     "Measure the magnetization of the system during the quench, which is defined as $M = \\frac{1}{N} \\sum_{i=1}^{N}\\langle\\sigma_{i}^{z}\\rangle$.\n",
     "Start with a system where all spins are in the $|\\uparrow\\rangle$ state. Use the `TEBD` algorithm with a bond dimension $\\chi$ to simulate the time evolution of the system.\n",
     "\n",
-    "Tip: Start with a small system (e.g. $N=12$) and a small number of time steps to test your implementation.\n",
+    "Tip: Start with a small system (e.g. $N=10$) and a small number of time steps to test your implementation.\n",
     "\n",
     "- Plot the average magnetization of the system during the quench using `Makie`.\n",
+    "- How does the magnetization of the system change with the bond dimension $\\chi$?\n",
     "- Do a 2D plot of the magnetization per site $m_{i}$ of the system as a function of time and site. See https://docs.makie.org/stable/reference/plots/heatmap/#example_4a31556a for an example of how to plot a heatmap with `Makie`.\n",
-    "- How does the magnetization of the system change as a function of the bond dimension $\\chi$?\n",
     "- Compute the energy and verify that it is conserved during the time evolution. How does that change if we use a larger time step $\\delta t$?"
    ]
   }
